fixed borders not showing

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -161,7 +161,7 @@
 }
 .main .app__container {
   margin-top: 3rem;
-  min-height: 723px;
+  min-height: 761px;
 }
 .main .app__container .app__cards__container {
   display: grid;
